# g4numi

./: CMakeLists.txt  G4Nevents.mac  GNUmakefile  LICENSE  Linkdef.h  LinkdefModern.h  ProcessG4NuMI.py  ProcessG4NuMI_localprod.py  ProcessG4NuMIh1trackingplane.py  README.md  README_h1trackingplane.md  build_instructions.txt  g4numi  g4numi.cc  g4numi_job.sh  g4numi_job_tar.sh  hadronic_lists.gmk  makemacro.py  me000z200i3.mac  run_tgt_opt_fins.sh  setup.sh  setup_beamsim.sh  test.txt  text.txt  user.properties  vis.mac
dataProducts/: CMakeLists.txt
exec/: CMakeLists.txt
include/: NtpMuon.hh  NumiAnalysis.hh  NumiDataInput.hh  NumiDataInput.hh.le_target  NumiDataInput.hh.me_target  NumiDetectorConstruction.hh  NumiDetectorMessenger.hh  NumiEventAction.hh  NumiImpWeight.hh  NumiMagneticField.hh  NumiNuWeight.hh  NumiParticleCode.hh  NumiPrimaryGeneratorAction.hh  NumiRunActionMessenger.hh  NumiSteppingAction.hh  NumiTrackInformation.hh  NumiVisManager.hh  dk2nu.h  draytupleMIB_t.hh  h1trackingplane_exit_t.hh  hadmmtuple_t.hh
libfiles/: liblzma.so.0  libpcre.so.0  libudev.so.0
macros/: .muon_test.mac.swp  CMakeLists.txt  G4Nevents_sample.mac  muon.mac  run_le_example.mac  run_me_target.mac  target_only_example.mac  template.mac  template_ME.mac  template_ME_h1trackingplane.mac  template_muon.mac  template_target_exit.mac
plot/: CMakeLists.txt
rndm/: beginOfRun_0000.rndm  beginOfRun_8000.rndm  endOfRun_0000.rndm  endOfRun_0001.rndm  endOfRun_8000.rndm
src/: CMakeLists.txt  NA49DetectorConstruction.cc  NA49PhysicsList.cc  NtpMuon.cc  NumiAnalysis.cc  NumiBaffle.cc  NumiDataInput.cc  NumiDataInput.cc.le_target  NumiDataInput.cc.me_hybrid  NumiDataInput.cc.me_target  NumiDataInput.cc.save  NumiDecayPipe.cc  NumiDecayPipeMagneticField.cc  NumiDetectorConstruction.cc  NumiDetectorConstruction.cc.le_target  NumiDetectorConstruction.cc.me_target  NumiDetectorMessenger.cc  NumiHadronAbsorber.cc  NumiHorn1.cc  NumiHorn1.cc.le_target  NumiHorn1.cc.me_target  NumiHorn2.cc  NumiHorns.cc  NumiImpWeight.cc  NumiMagneticField.cc  NumiMaterials.cc  NumiNOvATarget.cc  NumiNuWeight.cc  NumiParticleCode.cc  NumiPrimaryGeneratorAction.cc  NumiPrimaryGeneratorAction.cc.save  NumiRunAction.cc  NumiRunActionMessenger.cc  NumiRunManager.cc  NumiSecMonitors.cc  NumiStackingAction.cc  NumiSteppingAction.cc  NumiTarget.cc  NumiTarget.cc.le_target  NumiTarget.cc.me_target  (+11 more)
studies/: CMakeLists.txt  G4MinervaPionIXS.cc
tmp/Linux-g++/g4numi/: NtpMuon.d  NumiAnalysis.d  NumiBaffle.d  NumiDataInput.d  NumiDecayPipe.d  NumiDetectorConstruction.d  NumiDetectorMessenger.d  NumiHadronAbsorber.d  NumiHorn1.d  NumiHorn2.d  NumiHornSpiderSupport.d  NumiHorns.d  NumiImpWeight.d  NumiMagneticField.d  NumiMaterials.d  NumiNuWeight.d  NumiParticleCode.d  NumiPrimaryGeneratorAction.d  NumiPrimaryMessenger.d  NumiRunAction.d  NumiRunActionMessenger.d  NumiRunManager.d  NumiSecMonitors.d  NumiStackingAction.d  NumiSteppingAction.d  NumiTarget.d  NumiTargetHall.d  NumiTrackInformation.d  NumiTrackingAction.d  NumiTrajectory.d  NumiVisManager.d  data_t.d  g4numiCint.d  hadmmtuple_t.d  zptuple_t.d
tmp/Linux-g++/g4numi/exe/: g4numi.d
tmp/g4numi/: NumiBaffle.d  NumiDataInput.d  NumiDecayPipe.d  NumiDetectorConstruction.d  NumiDetectorMessenger.d  NumiHadronAbsorber.d  NumiHorn1.d  NumiHorn2.d  NumiHornSpiderSupport.d  NumiHorns.d  NumiMagneticField.d  NumiMaterials.d  NumiRunActionMessenger.d  NumiSecMonitors.d  NumiTarget.d  NumiTargetHall.d  NumiTrackInformation.d  NumiTrajectory.d  NumiVisManager.d
